--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -26,6 +26,12 @@ If \(z_j = x_jy_j\) as in the elementwise product, then it is clear we want \(H_
 the rest of the terms in the sums will disappear.
 \end{proof}
 
+\chapter{Initialization}
+RNNs can be quite sensitive to initialisation, especially with regard to learning long
+time dependencies \autocite{Le2015}. It has been suggested that a good initialisation should
+have eigenvalues on the complex unit circle \autocite{
+
+
 \chapter{Algorithms for Synthetic Tasks}
 
 \section{Addition}\label{sec:additionpseudo}
